--- a/pages/projects.html
+++ b/pages/projects.html
@@ -124,7 +124,42 @@
         <p class="projects-category"><a href="https://github.com/ayeshathoi/Machine-Learning-472"><u>View on Github</u></a></p>
         <p class="projects-tech-stack">Python, numPy, Pandas</p>
         <p class="projects-category">
-          I developed and applied advanced machine learning techniques, including matrix transformations, eigenvalue decomposition, and image reconstruction via singular value decomposition. I implemented AdaBoost with logistic regression for multi-class classification, built a feedforward neural network from scratch with various activation functions and regularization techniques, and performed PCA and clustering using Gaussian Mixture Models and the EM algorithm.
+          1. Implemented matrix transformation, eigen-value decomposition, image reconstruction using singular value decomposition. <br>
+          2. Implemented adaboost algorithm with logistic regression on three classfication datasets with exploratory data analysis and preprocessing techniques.  <br>
+          3. Implemeted FNN from scratch, including Relu, Softmax, tanh Activation function, Dropout Layer, L1, L2, Binary Cross Entropy Loss. <br>
+          <a href="https://github.com/ayeshathoi/Machine-Learning-472/blob/main/ML%20offline%203/report_1805062.pdf"><u>Report</u></a>
+          4. Implemented PCA & clustering with EM algorithm on gaussian mixture models from scratch. 
+        </p>
+      </a>
+    </li>
+
+
+    <li class="projects-item  active" data-filter-item data-category="AI">
+      <a href="https://github.com/ayeshathoi/Artificial-Intelligence-Sessional-318/tree/main">
+        <h2 class="projects-title">Intelligent Solvers for Puzzles</h2>
+
+        <figure class="projects-img">
+          <div class="projects-item-icon-box">
+            <ion-icon name="eye-outline"></ion-icon>
+          </div>
+
+          <img src="../assets/img/projects/AI.jpg" alt="detection">
+        </figure>
+
+        
+        <p class="projects-category"><a href="https://github.com/ayeshathoi/Artificial-Intelligence-Sessional-318/tree/main"><u>View on Github</u></a></p>
+        <p class="projects-tech-stack">A*, Value Ordering , Local Search , Inference</p>
+        <p class="projects-category">
+          1. N-Puzzle Solver: Implemented A* heuristic (Hamming Distance, Manhattan Distance) <br>
+          2. Latin Square Solver: Implemented csp value ordering (Forward Checking, Simple Backtracking) 
+          <a href="https://github.com/ayeshathoi/Artificial-Intelligence-Sessional-318/blob/main/LATIN%20SQUARE/1805062_report.pdf">
+            <u>Report</u>
+          </a>
+          3. Exam Scheduling: Used local search (Largest Enrollment, Saturation Degree - DSatur Algo, Largest Degree, Random Ordering, Kempe-Chain, Pair-Swap) 
+          <a href="https://github.com/ayeshathoi/Artificial-Intelligence-Sessional-318/blob/main/ExamScheduling_LocalSearch/1805062_Report.pdf">
+            <u>Report</u>
+          </a>
+          4. Minesweeper Solver: Utilized inference techniques (Implemented Random Moves, Safe moves, Discarded Diagonal Cells as neighbours)   
         </p>
 
       </a>
