--- a/pages/projects.html
+++ b/pages/projects.html
@@ -143,7 +143,7 @@
             <ion-icon name="eye-outline"></ion-icon>
           </div>
 
-          <img src="../assets/img/projects/AI.jpg" alt="detection">
+          <img src="./assets/img/projects/AI.jpg" alt="solvers">
         </figure>
 
         
@@ -160,6 +160,33 @@
             <u>Report</u>
           </a>
           4. Minesweeper Solver: Utilized inference techniques (Implemented Random Moves, Safe moves, Discarded Diagonal Cells as neighbours)   
+        </p>
+
+      </a>
+    </li>
+
+
+    <li class="projects-item  active" data-filter-item data-category="Systems">
+      <a href="https://github.com/ayeshathoi/Security-406/tree/main">
+        <h2 class="projects-title">Cryptography Algorithms, Security Vulnerabilities, Attacks and Protection</h2>
+
+        <figure class="projects-img">
+          <div class="projects-item-icon-box">
+            <ion-icon name="eye-outline"></ion-icon>
+          </div>
+
+          <img src="./assets/img/projects/steganography.png" alt="detection">
+        </figure>
+
+        
+        <p class="projects-category"><a href="https://github.com/ayeshathoi/Security-406/tree/main"><u>View on Github</u></a></p>
+        <p class="projects-category">
+          <a href="https://youtu.be/rYk8i8jIKjM"><u>Youtube Video</u></a>
+        </p>
+        <p class="projects-tech-stack">Python, TCP Socket Programming, Docker, Azure, SeedLab</p>
+        <p class="projects-category">
+          Here we implement public key cryptography system, AES, with Diffie Hellman and RSA key exchange algorithms interconnected via client-server socket. We also explore pedagogical malware (virus and worm) functionalities within docker containers and demonstrate buffer overflow attacks. Finally, we experiment with firewall configurations and demonstrate the features of MISP, an open-source Threat Intelligence tool.
+          Moreover, I explore steganography techniques to hide secret messages within images.
         </p>
 
       </a>
