--- a/pages/projects.html
+++ b/pages/projects.html
@@ -201,18 +201,15 @@
             <ion-icon name="eye-outline"></ion-icon>
           </div>
 
-          <img src="../assets/img/projects/NS2.png" alt="tcp-cubic">
+          <img src="./assets/img/projects/NS2.png" alt="tcp-cubic">
         </figure>
 
         
         <p class="projects-category"><a href="https://github.com/ayeshathoi/Computer-Networks-322/tree/main"><u>View on Github</u></a></p>
-        <p class="projects-category">
-          <a href="https://youtu.be/rYk8i8jIKjM"><u>Youtube Video</u></a>
-        </p>
         <p class="projects-tech-stack" style="color: gray;">Python, TCP Socket Programming, Docker, Azure, SeedLab</p>
         <p class="projects-category">
-          Here we implement public key cryptography system, AES, with Diffie Hellman and RSA key exchange algorithms interconnected via client-server socket. We also explore pedagogical malware (virus and worm) functionalities within docker containers and demonstrate buffer overflow attacks. Finally, we experiment with firewall configurations and demonstrate the features of MISP, an open-source Threat Intelligence tool.
-          Moreover, I explore steganography techniques to hide secret messages within images.
+          We setup Virtual Local Area Network (VLAN) using Cisco Packet Tracer and configure network components (Switch, Router, Trunk, NAT, PAT, ACL). We then use Network Simulator 2 (NS2) to simulate wired and wireless network topologies with varying protocols across different network layers. We also implement a simple multi-threaded file web server using Java socket programming. 
+          Finally, we experiment with TCP Cubic-FIT simulation in NS2 and improved it
         </p>
 
       </a>
