--- a/pages/projects.html
+++ b/pages/projects.html
@@ -206,10 +206,33 @@
 
         
         <p class="projects-category"><a href="https://github.com/ayeshathoi/Computer-Networks-322/tree/main"><u>View on Github</u></a></p>
-        <p class="projects-tech-stack" style="color: goldenrod;">Python, TCP Socket Programming, Docker, Azure, SeedLab</p>
+        <p class="projects-tech-stack" style="color: goldenrod;">TCL, AWK, CPP, ns2</p>
         <p class="projects-category">
           We setup Virtual Local Area Network (VLAN) using Cisco Packet Tracer and configure network components (Switch, Router, Trunk, NAT, PAT, ACL). We then use Network Simulator 2 (NS2) to simulate wired and wireless network topologies with varying protocols across different network layers. We also implement a simple multi-threaded file web server using Java socket programming. 
           Finally, we experiment with TCP Cubic-FIT simulation in NS2 and improved it
+        </p>
+
+      </a>
+    </li>
+
+
+    <li class="projects-item  active" data-filter-item data-category="Systems">
+      <a href="https://github.com/ayeshathoi/OS-314">
+        <h2 class="projects-title">Implementing an OS</h2>
+
+        <figure class="projects-img">
+          <div class="projects-item-icon-box">
+            <ion-icon name="eye-outline"></ion-icon>
+          </div>
+
+          <img src="./assets/img/projects/xv6.png" alt="tcp-cubic">
+        </figure>
+
+        
+        <p class="projects-category"><a href="https://github.com/ayeshathoi/OS-314"><u>View on Github</u></a></p>
+        <p class="projects-tech-stack" style="color: goldenrod;">xv6 Operating System, Bash, C++</p>
+        <p class="projects-category">
+          We first explore bash scripting and synchronization using pthreads. Then we implement custom system calls to incorporate command line functionalities and lottery scheduling algorithm into existing xv6 pedagogical operating system. Finally, we implement copy-on-write paging mechanism for xv6 memory management.
         </p>
 
       </a>
