--- a/pages/projects.html
+++ b/pages/projects.html
@@ -278,7 +278,30 @@
         
         <p class="projects-tech-stack" style="color: goldenrod;">Arduino, GSM Module, Pulse Oximeter, DHT11</p>
         <p class="projects-category">
-          The main aim of the project is to monitor heart rate, body temperature and blood oxygen saturation level of a patient body. It also monitors room humidity and room temperature of the patient room.This system designed by using Arduino Uno. Pulse oxymeter are being used here to measure temperature, blood oxygen level and pulse rate of body. Temperature and humidity sensor are being used to measure room temperature and room humidity. Corona Patient can be benefitted from this technology the most. SMS will be sent to the doctor in case of any critical situation by passing signal to GSM module. A buzzer will be activated so that doctor can pay more attention to the situation.
+          The main aim of the project is to monitor heart rate, body temperature and blood oxygen saturation level of a patient body. It also monitors room humidity and room temperature of the patient room. This system designed by using Arduino Uno. 
+          A msg will be sent to the doctor if the patient's health condition is not normal based on oxygen level
+        </p>
+
+      </a>
+    </li>
+
+    <li class="projects-item  active" data-filter-item data-category="Systems">
+      <a href="https://github.com/ayeshathoi/Graphics-410/tree/main">
+        <h2 class="projects-title">Raster Based Graphics Pipeline and Ray Tracing with OpenGL</h2>
+
+        <figure class="projects-img">
+          <div class="projects-item-icon-box">
+            <ion-icon name="eye-outline"></ion-icon>
+          </div>
+
+          <img src="./assets/img/projects/out.bmp" alt="graphics">
+        </figure>
+        <p class="projects-category"><a href="https://github.com/ayeshathoi/Graphics-410/tree/main"><u>View on Github</u></a></p>
+        <p class="projects-category"><a href="https://youtu.be/Gx7eTR-YP74"><u>View on Youtube</u></a></p>
+        
+        <p class="projects-tech-stack" style="color: goldenrod;">Arduino, GSM Module, Pulse Oximeter, DHT11</p>
+        <p class="projects-category">
+          We first implement 2D and 3D geometric transformation tasks using OpenGL C++ library. We then implement different steps (modeling, view, projection transformation, clipping, scan conversion) of a raster based graphics rendering pipeline. Finally we implement a ray casting and recursive ray tracing application with OpenGL using phong lighting model that includes a 3D world with objects of various geometric shape  
         </p>
 
       </a>
