--- a/pages/projects.html
+++ b/pages/projects.html
@@ -343,7 +343,7 @@
         </figure>
         <p class="projects-category"><a href="https://github.com/ayeshathoi/yourDoctor-408-Sessional"><u>View on Github</u></a></p>
         
-        <p class="projects-tech-stack" style="color: goldenrod;">SpringBoot, Spring Security, OracleDB, JavaScript, Bootstrap</p>
+        <p class="projects-tech-stack" style="color: goldenrod; padding: 3px;">Node.js, React.Js, PostgresDB</p>
         <p class="projects-category">
           An Online platform where a patient can book appointment with doctors, order ambulances and check health by nurses. Chatting service with doctors or nurse is also included. History will be saved and patient rate the services. And a hospital can see the rating and appoint nurse for the checkup. Online transaction facility is also included.  
         </p>
