--- a/pages/projects.html
+++ b/pages/projects.html
@@ -175,7 +175,7 @@
             <ion-icon name="eye-outline"></ion-icon>
           </div>
 
-          <img src="./assets/img/projects/steganography.png" alt="steganography">
+          <img src="./assets/img/projects/crypt.png" alt="crypt">
         </figure>
 
         
